# jobcraper

./: .gitignore  README.md  config.toml  docker-compose.yml  flake.nix  main.py  pyproject.toml  shell.nix
db/: database.db
src/: bulldogjob.py  db.py  justjoin.py  nofluffjobs.py  pracuj.py  scrape_agent.py
web/jobcraper_backend/: Dockerfile  deno.json  main.ts
web/jobcraper_web/: Dockerfile  index.html  package.json  postcss.config.js  shell.nix  vite.config.ts
web/jobcraper_web/src/: App.tsx
web/jobcraper_web/src/components/: Checkbox.tsx  Filters.tsx  JobOffers.tsx  LayoutToggle.tsx  Offer.tsx  Pagination.tsx
